--- a/dataFrames/subsettingDataFrames.ipynb
+++ b/dataFrames/subsettingDataFrames.ipynb
@@ -64,11 +64,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country Name</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>Birth rate</th>\n",
-       "      <th>Internet users</th>\n",
-       "      <th>Income Group</th>\n",
+       "      <th>CountryName</th>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th>BirthRate</th>\n",
+       "      <th>InternetUsers</th>\n",
+       "      <th>IncomeGroup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -166,20 +166,20 @@
        "</div>"
       ],
       "text/plain": [
-       "             Country Name Country Code  Birth rate  Internet users  \\\n",
-       "0                   Aruba          ABW      10.244            78.9   \n",
-       "1             Afghanistan          AFG      35.253             5.9   \n",
-       "2                  Angola          AGO      45.985            19.1   \n",
-       "3                 Albania          ALB      12.877            57.2   \n",
-       "4    United Arab Emirates          ARE      11.044            88.0   \n",
-       "..                    ...          ...         ...             ...   \n",
-       "190           Yemen, Rep.          YEM      32.947            20.0   \n",
-       "191          South Africa          ZAF      20.850            46.5   \n",
-       "192      Congo, Dem. Rep.          COD      42.394             2.2   \n",
-       "193                Zambia          ZMB      40.471            15.4   \n",
-       "194              Zimbabwe          ZWE      35.715            18.5   \n",
+       "              CountryName CountryCode  BirthRate  InternetUsers  \\\n",
+       "0                   Aruba         ABW     10.244           78.9   \n",
+       "1             Afghanistan         AFG     35.253            5.9   \n",
+       "2                  Angola         AGO     45.985           19.1   \n",
+       "3                 Albania         ALB     12.877           57.2   \n",
+       "4    United Arab Emirates         ARE     11.044           88.0   \n",
+       "..                    ...         ...        ...            ...   \n",
+       "190           Yemen, Rep.         YEM     32.947           20.0   \n",
+       "191          South Africa         ZAF     20.850           46.5   \n",
+       "192      Congo, Dem. Rep.         COD     42.394            2.2   \n",
+       "193                Zambia         ZMB     40.471           15.4   \n",
+       "194              Zimbabwe         ZWE     35.715           18.5   \n",
        "\n",
-       "            Income Group  \n",
+       "             IncomeGroup  \n",
        "0            High income  \n",
        "1             Low income  \n",
        "2    Upper middle income  \n",
@@ -195,7 +195,7 @@
        "[195 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "996c3540-3b37-44a4-b44d-7a3b557f3dc2",
+   "execution_count": 116,
+   "id": "e49f069c-3c8e-4914-8650-58f32d51e1a9",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "3      Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1d44724-31a9-4597-8e38-f0f98be5c03a",
+   "id": "c5ada531-8f55-4666-a90c-e3ff25a43fd0",
    "metadata": {},
    "source": [
     "# THREE PARTS"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683c260c-c78e-4bb1-abb3-d0f29cea20b4",
+   "id": "c00ed2aa-9747-4e26-a626-de1a0ef3498c",
    "metadata": {},
    "source": [
     "# 1-SEBSETTING USING ROWS"
@@ -315,8 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "391778fd-4b71-47c7-a7c3-10b84520b060",
+   "execution_count": 117,
+   "id": "01b51f0e-3c9b-4e6f-ae61-30112270a74b",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "3     Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "1f82ee06-ad0a-450d-b4d4-a952ddd2a41a",
+   "execution_count": 118,
+   "id": "9b28a450-26c2-4c1b-b6d3-d2473a434022",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "8          High income  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,8 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "7ba58f4f-bfc7-4400-995d-f0410549ee4a",
+   "execution_count": 119,
+   "id": "d03caf4c-5b4f-4a59-a843-29b5ef04b536",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "[86 rows x 5 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,8 +696,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "108945de-fa68-43d1-902b-6d88089a8fed",
+   "execution_count": 120,
+   "id": "27adcc10-15f9-4ec3-a1ce-57a6fff0fa0a",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "[195 rows x 5 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,8 +863,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "7c5d0a7d-3dc2-40b6-bba7-263f0d7e7bc6",
+   "execution_count": 121,
+   "id": "3b8d7207-1711-4d00-8127-7e64d66a982c",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "180     Uruguay         URY     14.374        57.6900          High income"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077dca38-e585-48f6-a4dc-e2bb00a462de",
+   "id": "ac0c5d63-daf3-4f4d-a7b7-7fe85ae89eb4",
    "metadata": {},
    "source": [
     "# 2-SEBSETTING USING COLUMNS"
@@ -1013,8 +1013,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "c69ef29b-20fd-4087-9f00-fa7f5586cbcd",
+   "execution_count": 122,
+   "id": "87f84a61-240b-4f13-b1ae-ba9b08beb01a",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,28 +1036,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "7ff61436-82ff-4464-b213-53c453d8358e",
+   "execution_count": 123,
+   "id": "9b5f1e53-3662-4ee1-8447-b3b80a6d3f79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                     Aruba\n",
-       "1               Afghanistan\n",
-       "2                    Angola\n",
-       "3                   Albania\n",
-       "4      United Arab Emirates\n",
-       "               ...         \n",
-       "190             Yemen, Rep.\n",
-       "191            South Africa\n",
-       "192        Congo, Dem. Rep.\n",
-       "193                  Zambia\n",
-       "194                Zimbabwe\n",
-       "Name: CountryName, Length: 195, dtype: object"
+       "0                   Aruba\n",
+       "1             Afghanistan\n",
+       "2                  Angola\n",
+       "3                 Albania\n",
+       "4    United Arab Emirates\n",
+       "Name: CountryName, dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,8 +1062,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "67cb3a71-6d57-4849-8bf5-57e768f593a2",
+   "execution_count": 124,
+   "id": "164bb51f-000d-4918-931a-83532d79755f",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1130,7 @@
        "4  United Arab Emirates     11.044"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,8 +1141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "bc37852a-4c9d-4156-b4d6-51d414ac959e",
+   "execution_count": 125,
+   "id": "70bd668d-0be8-4ef2-ac1b-4d62cd5cad01",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1156,7 @@
        "Name: BirthRate, dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cff473-6f13-4e24-b884-b9239fc132f7",
+   "id": "cd44eaf9-569d-4e3f-97ed-1dbbe9f3d73a",
    "metadata": {},
    "source": [
     "# 3-SEBSETTING COMBINING (ROWS & COLUMNS)"
@@ -1181,8 +1175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "19efdcde-68e9-489b-8298-cb9ade6a92e8",
+   "execution_count": 126,
+   "id": "96d6f8ce-2811-4c82-a851-3b813a249c34",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1255,7 @@
        "8     13.200             Australia"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978ad06a-10aa-4fa0-9409-285caca73d31",
+   "id": "d661e5a7-f296-4ceb-a80c-bed9f8e8ddf3",
    "metadata": {},
    "outputs": [],
    "source": []
