basic opertions  with a data frame

--- a/dataFrames/subsettingDataFrames.ipynb
+++ b/dataFrames/subsettingDataFrames.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "a593d495-5359-4df7-a525-bb990d3d1339",
    "metadata": {},
    "outputs": [],
@@ -30,183 +30,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "514f9524-d51a-41e7-844d-eda03d8fa3f8",
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "64a42497-50d4-49a0-85d6-509523c853ab",
    "metadata": {},
+   "outputs": [],
    "source": [
     "stats = pd.read_csv('Demographic-Data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "e5bcff92-4082-4b01-a960-358e07b90350",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CountryName</th>\n",
-       "      <th>CountryCode</th>\n",
-       "      <th>BirthRate</th>\n",
-       "      <th>InternetUsers</th>\n",
-       "      <th>IncomeGroup</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aruba</td>\n",
-       "      <td>ABW</td>\n",
-       "      <td>10.244</td>\n",
-       "      <td>78.9</td>\n",
-       "      <td>High income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>AFG</td>\n",
-       "      <td>35.253</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>Low income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>AGO</td>\n",
-       "      <td>45.985</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>12.877</td>\n",
-       "      <td>57.2</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>ARE</td>\n",
-       "      <td>11.044</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>High income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>Yemen, Rep.</td>\n",
-       "      <td>YEM</td>\n",
-       "      <td>32.947</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>20.850</td>\n",
-       "      <td>46.5</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>Congo, Dem. Rep.</td>\n",
-       "      <td>COD</td>\n",
-       "      <td>42.394</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>Low income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>40.471</td>\n",
-       "      <td>15.4</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>35.715</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>Low income</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>195 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              CountryName CountryCode  BirthRate  InternetUsers  \\\n",
-       "0                   Aruba         ABW     10.244           78.9   \n",
-       "1             Afghanistan         AFG     35.253            5.9   \n",
-       "2                  Angola         AGO     45.985           19.1   \n",
-       "3                 Albania         ALB     12.877           57.2   \n",
-       "4    United Arab Emirates         ARE     11.044           88.0   \n",
-       "..                    ...         ...        ...            ...   \n",
-       "190           Yemen, Rep.         YEM     32.947           20.0   \n",
-       "191          South Africa         ZAF     20.850           46.5   \n",
-       "192      Congo, Dem. Rep.         COD     42.394            2.2   \n",
-       "193                Zambia         ZMB     40.471           15.4   \n",
-       "194              Zimbabwe         ZWE     35.715           18.5   \n",
-       "\n",
-       "             IncomeGroup  \n",
-       "0            High income  \n",
-       "1             Low income  \n",
-       "2    Upper middle income  \n",
-       "3    Upper middle income  \n",
-       "4            High income  \n",
-       "..                   ...  \n",
-       "190  Lower middle income  \n",
-       "191  Upper middle income  \n",
-       "192           Low income  \n",
-       "193  Lower middle income  \n",
-       "194           Low income  \n",
-       "\n",
-       "[195 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "e49f069c-3c8e-4914-8650-58f32d51e1a9",
    "metadata": {},
    "outputs": [
@@ -283,7 +118,7 @@
        "3      Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,12 +137,12 @@
    "id": "c5ada531-8f55-4666-a90c-e3ff25a43fd0",
    "metadata": {},
    "source": [
-    "# THREE PARTS"
+    "# THREE PARTS:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c00ed2aa-9747-4e26-a626-de1a0ef3498c",
+   "id": "0c36254b-78f2-4407-90ed-94d4d17d21b4",
    "metadata": {},
    "source": [
     "# 1-SEBSETTING USING ROWS"
@@ -315,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "01b51f0e-3c9b-4e6f-ae61-30112270a74b",
+   "execution_count": 51,
+   "id": "d5608b36-2b7e-4aca-ba13-99eca6598bf1",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +209,7 @@
        "3     Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "9b28a450-26c2-4c1b-b6d3-d2473a434022",
+   "execution_count": 52,
+   "id": "dfd28948-2dbb-41f1-86b4-6b3278a7ec37",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +353,7 @@
        "8          High income  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "d03caf4c-5b4f-4a59-a843-29b5ef04b536",
+   "execution_count": 53,
+   "id": "cc725e54-bb29-43ea-acd9-45edd3ae0d04",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +520,7 @@
        "[86 rows x 5 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,8 +531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "27adcc10-15f9-4ec3-a1ce-57a6fff0fa0a",
+   "execution_count": 54,
+   "id": "209776e6-3c14-4e10-9290-355997eec85c",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +687,7 @@
        "[195 rows x 5 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,8 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "3b8d7207-1711-4d00-8127-7e64d66a982c",
+   "execution_count": 55,
+   "id": "ca09c25c-f078-4576-bfc9-d66008976db8",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +829,7 @@
        "180     Uruguay         URY     14.374        57.6900          High income"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac0c5d63-daf3-4f4d-a7b7-7fe85ae89eb4",
+   "id": "54be4861-753f-4417-b7e4-b89f7850c3ed",
    "metadata": {},
    "source": [
     "# 2-SEBSETTING USING COLUMNS"
@@ -1013,8 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "87f84a61-240b-4f13-b1ae-ba9b08beb01a",
+   "execution_count": 56,
+   "id": "61580bd2-9a9f-4f7a-85d9-77d5e534d3a5",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +860,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,8 +871,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "9b5f1e53-3662-4ee1-8447-b3b80a6d3f79",
+   "execution_count": 57,
+   "id": "b0ec60e9-da22-454d-8168-7cebdcea1532",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +886,7 @@
        "Name: CountryName, dtype: object"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,113 +896,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "164bb51f-000d-4918-931a-83532d79755f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CountryName</th>\n",
-       "      <th>BirthRate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aruba</td>\n",
-       "      <td>10.244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>35.253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>45.985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>12.877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>11.044</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            CountryName  BirthRate\n",
-       "0                 Aruba     10.244\n",
-       "1           Afghanistan     35.253\n",
-       "2                Angola     45.985\n",
-       "3               Albania     12.877\n",
-       "4  United Arab Emirates     11.044"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats[['CountryName','BirthRate']].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "70bd668d-0be8-4ef2-ac1b-4d62cd5cad01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    10.244\n",
-       "1    35.253\n",
-       "2    45.985\n",
-       "3    12.877\n",
-       "4    11.044\n",
-       "Name: BirthRate, dtype: float64"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.BirthRate.head() # quick way to get a column Object name"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "cd44eaf9-569d-4e3f-97ed-1dbbe9f3d73a",
+   "id": "1c247262-e37f-4189-a1d3-b1772257a93c",
    "metadata": {},
    "source": [
     "# 3-SEBSETTING COMBINING (ROWS & COLUMNS)"
@@ -1175,8 +905,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "96d6f8ce-2811-4c82-a851-3b813a249c34",
+   "execution_count": 60,
+   "id": "59d45b6a-dd9b-41a4-bf58-a4d2152a78fc",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +985,7 @@
        "8     13.200             Australia"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d661e5a7-f296-4ceb-a80c-bed9f8e8ddf3",
+   "id": "a86a87da-0f83-478a-a9f5-f4f625bf0d2a",
    "metadata": {},
    "outputs": [],
    "source": []
