--- a/dataFrames/filteringDataframe.ipynb
+++ b/dataFrames/filteringDataframe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "id": "a593d495-5359-4df7-a525-bb990d3d1339",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 46,
    "id": "64a42497-50d4-49a0-85d6-509523c853ab",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 47,
    "id": "e49f069c-3c8e-4914-8650-58f32d51e1a9",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "3      Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 48,
    "id": "d5608b36-2b7e-4aca-ba13-99eca6598bf1",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "Name: InternetUsers, Length: 195, dtype: bool"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 49,
    "id": "dfd28948-2dbb-41f1-86b4-6b3278a7ec37",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "Name: BirthRate, Length: 195, dtype: bool"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 50,
    "id": "cc725e54-bb29-43ea-acd9-45edd3ae0d04",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "172   Timor-Leste         TLS     35.755            1.1  Lower middle income"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 51,
    "id": "209776e6-3c14-4e10-9290-355997eec85c",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "193  Lower middle income  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 52,
    "id": "0e1375ea-60db-4c27-919d-7e2f54f01d0c",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "156     Somalia         SOM     43.891            1.5  Low income"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 53,
    "id": "ca09c25c-f078-4576-bfc9-d66008976db8",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "156     Somalia         SOM     43.891            1.5  Low income"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 54,
    "id": "b0ec60e9-da22-454d-8168-7cebdcea1532",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
        "[67 rows x 5 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 55,
    "id": "a86a87da-0f83-478a-a9f5-f4f625bf0d2a",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
        "       'Lower middle income'], dtype=object)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 56,
    "id": "aa64bf5e-8f34-46a0-b955-2a09c9ac50ce",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
        "116       Malta         MLT        9.5        68.9138  High income"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,6 +913,445 @@
     "\n",
     "stats[filter]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb1f722a-3f5c-4498-8121-82462d169290",
+   "metadata": {},
+   "source": [
+    "# ACCESSING INDIVIDUAL ELEMENTS: .at & .iat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8f829f6f-69a1-4cb5-a2e3-c469573a1678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CountryName</th>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th>BirthRate</th>\n",
+       "      <th>InternetUsers</th>\n",
+       "      <th>IncomeGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>10.244</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>35.253</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>Low income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>45.985</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>12.877</td>\n",
+       "      <td>57.2</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>ARE</td>\n",
+       "      <td>11.044</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            CountryName CountryCode  BirthRate  InternetUsers  \\\n",
+       "0                 Aruba         ABW     10.244           78.9   \n",
+       "1           Afghanistan         AFG     35.253            5.9   \n",
+       "2                Angola         AGO     45.985           19.1   \n",
+       "3               Albania         ALB     12.877           57.2   \n",
+       "4  United Arab Emirates         ARE     11.044           88.0   \n",
+       "\n",
+       "           IncomeGroup  \n",
+       "0          High income  \n",
+       "1           Low income  \n",
+       "2  Upper middle income  \n",
+       "3  Upper middle income  \n",
+       "4          High income  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .at >>>>>>>> for lables ** important even integers are treated as lables\n",
+    "# .iat >>>>>>>> for integers location\n",
+    "\n",
+    "stats.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "46c52b96-9745-4903-9632-6f5f259a80cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Upper middle income'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.iat[2,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "8463dce8-3395-4b3d-9b22-9b0a7babcb0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.877"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.at[3,'BirthRate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "09d23b07-ac02-4298-b351-65e16775b925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# different between .at & .iat\n",
+    "\n",
+    "sub10 = stats[::10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b15f5050-3908-4255-bdad-cd4b54692145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CountryName</th>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th>BirthRate</th>\n",
+       "      <th>InternetUsers</th>\n",
+       "      <th>IncomeGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>10.244</td>\n",
+       "      <td>78.900000</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>AZE</td>\n",
+       "      <td>18.300</td>\n",
+       "      <td>58.700000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>BLR</td>\n",
+       "      <td>12.500</td>\n",
+       "      <td>54.170000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>10.900</td>\n",
+       "      <td>85.800000</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>15.022</td>\n",
+       "      <td>45.960000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Ecuador</td>\n",
+       "      <td>ECU</td>\n",
+       "      <td>21.070</td>\n",
+       "      <td>40.353684</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Gabon</td>\n",
+       "      <td>GAB</td>\n",
+       "      <td>30.555</td>\n",
+       "      <td>9.200000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Greenland</td>\n",
+       "      <td>GRL</td>\n",
+       "      <td>14.500</td>\n",
+       "      <td>65.800000</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>20.291</td>\n",
+       "      <td>15.100000</td>\n",
+       "      <td>Lower middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>KAZ</td>\n",
+       "      <td>22.730</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>Libya</td>\n",
+       "      <td>LBY</td>\n",
+       "      <td>21.425</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>Moldova</td>\n",
+       "      <td>MDA</td>\n",
+       "      <td>12.141</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>Lower middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Mozambique</td>\n",
+       "      <td>MOZ</td>\n",
+       "      <td>39.705</td>\n",
+       "      <td>5.400000</td>\n",
+       "      <td>Low income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>NLD</td>\n",
+       "      <td>10.200</td>\n",
+       "      <td>93.956400</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>9.600</td>\n",
+       "      <td>62.849200</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>Sudan</td>\n",
+       "      <td>SDN</td>\n",
+       "      <td>33.477</td>\n",
+       "      <td>22.700000</td>\n",
+       "      <td>Lower middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>Suriname</td>\n",
+       "      <td>SUR</td>\n",
+       "      <td>18.455</td>\n",
+       "      <td>37.400000</td>\n",
+       "      <td>Upper middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>Tajikistan</td>\n",
+       "      <td>TJK</td>\n",
+       "      <td>30.792</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>Lower middle income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>URY</td>\n",
+       "      <td>14.374</td>\n",
+       "      <td>57.690000</td>\n",
+       "      <td>High income</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Yemen, Rep.</td>\n",
+       "      <td>YEM</td>\n",
+       "      <td>32.947</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>Lower middle income</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CountryName CountryCode  BirthRate  InternetUsers          IncomeGroup\n",
+       "0          Aruba         ABW     10.244      78.900000          High income\n",
+       "10    Azerbaijan         AZE     18.300      58.700000  Upper middle income\n",
+       "20       Belarus         BLR     12.500      54.170000  Upper middle income\n",
+       "30        Canada         CAN     10.900      85.800000          High income\n",
+       "40    Costa Rica         CRI     15.022      45.960000  Upper middle income\n",
+       "50       Ecuador         ECU     21.070      40.353684  Upper middle income\n",
+       "60         Gabon         GAB     30.555       9.200000  Upper middle income\n",
+       "70     Greenland         GRL     14.500      65.800000          High income\n",
+       "80         India         IND     20.291      15.100000  Lower middle income\n",
+       "90    Kazakhstan         KAZ     22.730      54.000000  Upper middle income\n",
+       "100        Libya         LBY     21.425      16.500000  Upper middle income\n",
+       "110      Moldova         MDA     12.141      45.000000  Lower middle income\n",
+       "120   Mozambique         MOZ     39.705       5.400000           Low income\n",
+       "130  Netherlands         NLD     10.200      93.956400          High income\n",
+       "140       Poland         POL      9.600      62.849200          High income\n",
+       "150        Sudan         SDN     33.477      22.700000  Lower middle income\n",
+       "160     Suriname         SUR     18.455      37.400000  Upper middle income\n",
+       "170   Tajikistan         TJK     30.792      16.000000  Lower middle income\n",
+       "180      Uruguay         URY     14.374      57.690000          High income\n",
+       "190  Yemen, Rep.         YEM     32.947      20.000000  Lower middle income"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "aaaf7020-fdea-46cf-acfc-cf895e238c52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Azerbaijan'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub10.iat[10,0]\n",
+    "sub10.at[10,'CountryName']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3e6349e-731d-448b-a4d1-9604de20e93c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9871d318-e37c-4c01-a6af-8f8fc7cfea1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
