--- a/practice/subsettingDataFrames.ipynb
+++ b/practice/subsettingDataFrames.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "id": "a593d495-5359-4df7-a525-bb990d3d1339",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "64a42497-50d4-49a0-85d6-509523c853ab",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "id": "e49f069c-3c8e-4914-8650-58f32d51e1a9",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "3      Albania         ALB     12.877           57.2  Upper middle income"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
     "stats.columns = ['CountryName', 'CountryCode', 'BirthRate', 'InternetUsers',\n",
     "       'IncomeGroup']\n",
     "\n",
-    "stats.head(4)"
+    "stats.head(4)\n"
    ]
   },
   {
